--- a/app/views/positions/edit.html.erb
+++ b/app/views/positions/edit.html.erb
@@ -1,11 +1,6 @@
-<h2>Editing position</h2>
+<%=content_tag :h1, "Editing position #{position}" %>
 
-<%= simple_form_for(@position) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for position do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Show', @position %> |
-<%= link_to 'Back', positions_path %>
-</p>
 
