--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,10 +1,6 @@
-<h2>New question</h2>
+<%=content_tag :h1, "New question"%>
 
-<%= simple_form_for(@question) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for(question) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Back', questions_path %>
-</p>
 
