--- a/app/views/quizzes/edit.html.erb
+++ b/app/views/quizzes/edit.html.erb
@@ -1,11 +1,6 @@
-<h2>Editing quiz</h2>
+<%=content_tag :h1, "Edit quiz #{quiz}" %>
 
-<%= simple_form_for(@quiz) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for(quiz) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Show', @quiz %> |
-<%= link_to 'Back', quizzes_path %>
-</p>
 
