--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,6 +1,6 @@
-<h2>Listing quizzes</h2>
+<%=content_tag :h1, "Quizzes"%>
 
-<%= form_for @q, url: request.fullpath, method: :get do |form| %>
+<%= form_for q, url: request.fullpath, method: :get do |form| %>
 <p>
   <%= form.label :name_cont, 'Name' %>
   <%= form.text_field :name_cont %>
@@ -8,15 +8,11 @@
 </p>
 <% end %>
 
-<p>
-<%= paginate @quizzes %>
-</p>
+<%= paginate quizzes %>
 
-<%= render partial: "quizzes/quizzes", object: @quizzes %>
+<%= render partial: "quizzes/quizzes", object: quizzes %>
 
-<p>
-<%= paginate @quizzes %>
-</p>
+<%= paginate quizzes %>
 
 <hr />
 
