--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,10 +1,6 @@
-<h2>New quiz</h2>
+<%=content_tag :h1, "New quiz"%>
 
-<%= simple_form_for(@quiz) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for(quiz) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Back', quizzes_path %>
-</p>
 
