--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,10 +1,6 @@
-<h2>New schedule</h2>
+<%=content_tag :h1, "New schedule" %>
 
-<%= simple_form_for(@schedule) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for(schedule) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Back', schedules_path %>
-</p>
 
