--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -1,6 +1,6 @@
   <%= table_row_tag true, false, { id: "schedule-#{schedule.id}" } do %>
-    <td><%=h schedule.name %></td>
-    <td><%= link_to 'Show', schedule %></td>
+    <%=content_tag :td, schedule.name %>
+    <%=content_tag :td, link_to( 'Show', schedule ) %>
     <td><%= link_to( 'Edit', edit_schedule_path(schedule) ) if permitted_to? :edit, schedule %></td>
     <td><%= link_to( 'Destroy', schedule, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, schedule %></td>
   <% end %>
