--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,11 +1,6 @@
-<h2>Editing schedule</h2>
+<%=content_tag :h1, "Edit schedule #{schedule}" %>
 
-<%= simple_form_for(@schedule) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for(schedule) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Show', @schedule %> |
-<%= link_to 'Back', schedules_path %>
-</p>
 
