--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,12 +1,12 @@
   <%= table_row_tag true, false, { id: "user-#{user.id}" } do %>
-    <td><%=h user.name( :last_first ) %></td>
-    <td><%=h user.net_id %></td>
-    <td><%=h user.email %></td>
-    <td><%=h user.mobile_phone :pretty %></td>
-    <td><%=h user.work_phone :pretty %></td>
-    <td><%=h user.home_phone :pretty %></td>
-    <td><%=h user.work_address %></td>
-    <td><%=h user.date_of_birth.to_formatted_s(:db) if user.date_of_birth %></td>
+    <%=content_tag :td, user.name( :last_first ) %>
+    <%=content_tag :td, user.net_id %>
+    <%=content_tag :td, user.email %>
+    <%=content_tag :td, user.mobile_phone :pretty %>
+    <%=content_tag :td, user.work_phone :pretty %>
+    <%=content_tag :td, user.home_phone :pretty %>
+    <%=content_tag :td, user.work_address %>
+    <%=content_tag :td, user.date_of_birth.try( :to_formatted_s, :db) %>
     <td><%= user.statuses.join ', ' %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to( 'Edit', edit_user_path(user) ) if permitted_to? :edit, user %></td>
