--- a/app/views/users/import_empl_id.html.erb
+++ b/app/views/users/import_empl_id.html.erb
@@ -1,4 +1,4 @@
-<h2>Update users empl_ids</h2>
+<%=content_tag :h1, "Update users empl_ids" %>
 
 <%= form_tag do_import_empl_id_users_path, method: :put, multipart: true do %>
 <p>
