--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,30 +1,28 @@
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.inputs do %>
-    <%= form.input :first_name %>
-    <%= form.input :middle_name %>
-    <%= form.input :last_name %>
-    <% if permitted_to? :staff, form.object %>
-      <% if form.object.new_record? %>
-        <%= form.input :net_id, label: 'Net id' %>
-      <% else %>
-        <%= form.input :net_id, label: 'Net id', input_html: { readonly: true } %>
-      <% end %>
-      <%= form.input :empl_id, label: 'Empl id' %>
-      <%= form.input :status, as: :radio, collection: User::STATUSES %>
+  <%= form.input :first_name %>
+  <%= form.input :middle_name %>
+  <%= form.input :last_name %>
+  <% if permitted_to? :staff, form.object %>
+    <% if form.object.new_record? %>
+      <%= form.input :net_id, label: 'Net id' %>
+    <% else %>
+      <%= form.input :net_id, label: 'Net id', input_html: { readonly: true } %>
     <% end %>
-    <%= form.input :email %>
-    <%= form.input :mobile_phone %>
-    <%= form.input :work_phone %>
-    <%= form.input :home_phone %>
-    <%= form.input :work_address %>
-    <%= form.input :date_of_birth, as: :string %>
-    <%= form.input :resume, as: :file, hint: 'You may optionally provide a resume (pdf only)' %>
-    <%= form.input :portrait, as: :file, hint: 'You may optionally provide a picture (jpg only)' %>
-    <%= form.input :portrait_cache, as: :hidden %>
-    <% if permitted_to? :manage, form.object %>
-      <%= form.input :admin, as: :radio, label: 'Administrator?' %>
-      <%= form.input :staff, as: :radio, label: 'Staff?' %>
-    <% end %>
+    <%= form.input :empl_id, label: 'Empl id' %>
+    <%= form.input :status, as: :radio, collection: User::STATUSES %>
   <% end %>
-  <%= form.actions %>
+  <%= form.input :email %>
+  <%= form.input :mobile_phone %>
+  <%= form.input :work_phone %>
+  <%= form.input :home_phone %>
+  <%= form.input :work_address %>
+  <%= form.input :date_of_birth, as: :string %>
+  <%= form.input :resume, as: :file, hint: 'You may optionally provide a resume (pdf only)' %>
+  <%= form.input :portrait, as: :file, hint: 'You may optionally provide a picture (jpg only)' %>
+  <%= form.input :portrait_cache, as: :hidden %>
+  <% if permitted_to? :manage, form.object %>
+    <%= form.input :admin, as: :radio, label: 'Administrator?' %>
+    <%= form.input :staff, as: :radio, label: 'Staff?' %>
+  <% end %>
+  <%= form.button :wrapped, cancel: ( user.id == current_user.id ? home_path : users_path ) %>
 
