Fix alert-related tests in general.  All authority features pass.

--- a/app/views/authorities/index.html.erb
+++ b/app/views/authorities/index.html.erb
@@ -1,6 +1,6 @@
-<h2>Listing authorities</h2>
+<%=content_tag :h1, "Authorities" %>
 
-<%= render partial: "authorities/authorities", object: @authorities %>
+<%= render partial: "authorities/authorities", object: authorities %>
 <hr />
 
 <p>
