--- a/app/views/authorities/new.html.erb
+++ b/app/views/authorities/new.html.erb
@@ -1,12 +1,6 @@
-<h2>New authority</h2>
+<%=content_tag :h1, "New authority" %>
 
-<%= simple_form_for(@authority) do |f| %>
-
-  <%= render :partial => 'form', :object => f %>
-
+<%= simple_form_for(authority) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Back', authorities_path %>
-</p>
 
