--- a/app/views/authorities/edit.html.erb
+++ b/app/views/authorities/edit.html.erb
@@ -1,11 +1,6 @@
-<h2>Editing authority</h2>
+<%=content_tag :h1, "Edit authority"%>
 
-<%= simple_form_for @authority do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for authority do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Show', @authority %> |
-<%= link_to 'Back', authorities_path %>
-</p>
 
