--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,6 +1,6 @@
-<h2>Listing brands</h2>
+<%=content_tag :h1, 'Brands' %>
 
-<%= render :partial => "brands", :object => @brands %>
+<%= render partial: "brands", object: brands %>
 
 <hr />
 
