--- a/app/views/brands/_brand.html.erb
+++ b/app/views/brands/_brand.html.erb
@@ -1,5 +1,5 @@
   <%= table_row_tag true, false, { id: "brand-#{brand.id}" } do %>
-    <td><%=h brand.name %></td>
+    <%=content_tag :td, brand.name %>
     <td><%= link_to 'Show', brand %></td>
     <td><%= link_to( 'Edit', edit_brand_path(brand) ) if permitted_to? :edit, brand %></td>
     <td><%= link_to( 'Destroy', brand, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, brand %></td>
