--- a/app/views/brands/new.html.erb
+++ b/app/views/brands/new.html.erb
@@ -1,10 +1,6 @@
-<h2>New brand</h2>
+<%=content_tag :h1, "New brand" %>
 
-<%= simple_form_for(@brand, :html => { :multipart => true } ) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for(brand, html: { multipart: true } ) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Back', brands_path %>
-</p>
 
