--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -4,11 +4,11 @@
     hint: 'What is the name that should appear in from for messages regarding this committee?' %>
   <%= form.input :contact_email,
     hint: 'What is the email that should appear in from for messages regarding this committee?' %>
-  <%= form.input :active, as: :radio, label: 'Active?',
+  <%= form.input :active, as: :radio_buttons, label: 'Active?',
     hint: 'Is committee active for staffing and motion purposes?' %>
-  <%= form.input :schedule, hint: 'On what schedule are sessions of the committee organized?' %>
-  <%= form.input :meeting_template, hint: 'What template should be used to create meeting agendas?' %>
-  <%= form.input :brand %>
+  <%= form.association :schedule, hint: 'On what schedule are sessions of the committee organized?' %>
+  <%= form.association :meeting_template, hint: 'What template should be used to create meeting agendas?' %>
+  <%= form.association :brand %>
   <%= form.input :publish_email, hint: 'Where is the default address to publish meeting notices?' %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
