--- a/app/views/meetings/_meeting_section_fields.html.erb
+++ b/app/views/meetings/_meeting_section_fields.html.erb
@@ -1,7 +1,7 @@
 <%= content_tag :div, class: 'nested-fields' do %>
   <%= f.input :name %>
   <%= f.input :position, as: :hidden %>
-  <%= f.input :meeting_items, as: :cocoon, ordered_by: :position %>
+  <%= cocoon_fields f, :meeting_items, insertable: true, ordered_by: :position %>
   <%= link_to_remove_association 'Remove Meeting Section', f %>
 <% end %>
 
