--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -21,23 +21,17 @@
   </p>
 <% end %>
 
-<p>
 <%= paginate meetings %>
-</p>
 
 <%= render partial: "meetings/meetings", object: meetings,
-  locals: { committee: ( committee ? committee : false ),
-            position: ( user ? true : false ) } %>
+  locals: { committee: ( committee ? committee : false ) } %>
 
-<p>
 <%= paginate meetings %>
-</p>
 
 <hr />
 
 <p>
-<% if committee && permitted_to?( :create, committee.meetings.
-  build( period_id: committee.periods.active ? committee.periods.active.id : nil ) ) %>
+<% if committee && permitted_to?( :create, meeting ) %>
 <%= link_to 'New meeting', new_committee_meeting_path( committee ) %>
 <% end %>
 </p>
