--- a/app/views/meetings/publish.html.erb
+++ b/app/views/meetings/publish.html.erb
@@ -1,14 +1,10 @@
-<h1>Publish <%= meeting %></h1>
+<%=content_tag :h1, "Publish #{meeting}"%>
 
 <p>Use this page to generate an email notice on your behalf to a recipient with the agenda and attachments for the meeting.</p>
 
 <%= simple_form_for meeting, url: publish_meeting_path(meeting), method: :put do |form| %>
-  <%= form.inputs do %>
   <%= form.input :publish_to, label: 'To', hint: 'To what address will this be published?' %>
-  <% end %>
 
-  <%= form.actions do %>
-  <%= form.action :submit, label: 'Publish' %>
-  <% end %>
+  <%= form.button :wrapped, label: 'Publish', cancel: meeting_path(form.object) %>
 <% end %>
 
