--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -8,11 +8,11 @@
 </p>
 
 <p>
-  <b>Starts at:</b> <%= meeting.starts_at.to_formatted_s :long_ordinal %>
+  <b>Starts at:</b> <%= meeting.starts_at.to_formatted_s :us_ordinal %>
 </p>
 
 <p>
-  <b>Ends at:</b> <%= meeting.ends_at.to_formatted_s :long_ordinal %>
+  <b>Ends at:</b> <%= meeting.ends_at.to_formatted_s :us_ordinal %>
 </p>
 
 <p>
