--- a/app/views/meetings/_meeting_item_fields.html.erb
+++ b/app/views/meetings/_meeting_item_fields.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, class: 'nested-fields' do %>
+<%= field_set_tag( sortable_label(f.object.to_s), class: 'nested-fields') do %>
   <% unless f.object.motion_name.present? %>
   <%= f.input :name, hint: "If not associated with a motion, provide name and leave motion blank." %>
   <% end %>
