--- a/app/views/meetings/_meeting_section_fields.html.erb
+++ b/app/views/meetings/_meeting_section_fields.html.erb
@@ -1,9 +1,7 @@
-<%= field_set_tag( f.object.to_s ) do %>
-  <%= content_tag :div, class: 'nested-fields' do %>
-    <%= f.input :name %>
-    <%= f.input :position, as: :hidden %>
-    <%= cocoon_fields f, :meeting_items, insertable: true, ordered_by: :position %>
-    <%= link_to_remove_association 'Remove Meeting Section', f %>
-  <% end %>
+<%= field_set_tag( sortable_label(f.object.to_s), class: 'nested-fields' ) do %>
+  <%= f.input :name %>
+  <%= f.input :position, as: :hidden %>
+  <%= cocoon_fields f, :meeting_items, insertable: true, ordered_by: :position %>
+  <%= link_to_remove_association 'Remove Meeting Section', f %>
 <% end %>
 
