--- a/app/views/attachments/_attachment_fields.html.erb
+++ b/app/views/attachments/_attachment_fields.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, class: 'nested-fields' do %>
+<%= field_set_tag( f.object.to_s, class: 'nested-fields' ) do %>
   <%= f.input :document, as: :file, label: 'Attachment document',
     hint: 'Specify the file you wish to attach.' %>
   <%= f.input :document_cache, as: :hidden %>
