--- a/app/views/meeting_templates/_meeting_item_template_fields.html.erb
+++ b/app/views/meeting_templates/_meeting_item_template_fields.html.erb
@@ -1,10 +1,8 @@
-<%= content_tag :div, class: 'nested-fields' do %>
-  <%= field_set_tag sortable_label( 'Meeting Item Template' ) do %>
-    <%= f.input :name %>
-    <%= f.input :duration %>
-    <%= f.input :description %>
-    <%= f.input :position, as: :hidden %>
-    <%= link_to_remove_association 'Remove Meeting Item Template', f %>
-  <% end %>
+<%= field_set_tag( sortable_label( f.object.to_s ), class: 'nested-fields' ) do %>
+  <%= f.input :name %>
+  <%= f.input :duration %>
+  <%= f.input :description %>
+  <%= f.input :position, as: :hidden %>
+  <%= link_to_remove_association 'Remove Meeting Item Template', f %>
 <% end %>
 
