--- a/app/views/meeting_templates/_meeting_section_template_fields.html.erb
+++ b/app/views/meeting_templates/_meeting_section_template_fields.html.erb
@@ -1,9 +1,7 @@
-<%= content_tag :div, class: 'nested-fields' do %>
-  <%= field_set_tag sortable_label( 'Meeting Section Template' ) do %>
-    <%= f.input :name %>
-    <%= f.input :position, as: :hidden %>
-    <%= f.input :meeting_item_templates, as: :cocoon, ordered_by: :position %>
-    <%= link_to_remove_association 'Remove Meeting Section Template', f %>
-  <% end %>
+<%= field_set_tag( sortable_label( f.object.to_s ), class: 'nested-fields' ) do %>
+  <%= f.input :name %>
+  <%= f.input :position, as: :hidden %>
+  <%= cocoon_fields f, :meeting_item_templates, insertable: true, ordered_by: :position %>
+  <%= link_to_remove_association 'Remove Meeting Section Template', f %>
 <% end %>
 
