--- a/app/views/memberships/decline.html.erb
+++ b/app/views/memberships/decline.html.erb
@@ -1,24 +1,16 @@
-<h1>Decline renewal of membership</h1>
+<%=content_tag :h1, "Decline renewal of #{membership}" %>
 
 <p>
 Use this form to decline renewal of the membership described below.
 </p>
 
-<%= render partial: 'memberships/detail', locals: { membership: @membership } %>
+<%= render partial: 'memberships/detail', locals: { membership: membership } %>
 
-<%= simple_form_for(@membership, as: :membership,
-  url: decline_membership_path( @membership ), method: :put ) do |form| %>
+<%= simple_form_for(membership, as: :membership,
+  url: decline_membership_path( membership ), method: :put ) do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.inputs do %>
   <%= form.input :decline_comment, label: 'Comment',
     hint: 'Include a brief explanation for why renewal is being declined.' %>
-  <% end %>
-  <%= form.actions do %>
-  <%= form.action :submit, label: 'Decline Renewal' %>
-  <% end %>
+  <%= form.button :button, 'Decline Renewal' %> or <%=link_to "Cancel", membership_path(membership) %>
 <% end %>
-
-<p>
-<%= link_to 'Show', @membership %>
-</p>
 
