--- a/app/views/motions/divide.html.erb
+++ b/app/views/motions/divide.html.erb
@@ -11,7 +11,8 @@
   <%= simple_form_for( motion, url: divide_motion_path( motion ),
     method: :put ) do |form| %>
     <%= render partial: 'motions/event_fields', object: form %>
-    <%= form.input :referred_motions, as: :cocoon, label: "Dividing Motions" %>
+    <%= cocoon_fields( form, :referred_motions, insertable: true,
+      label: "Dividing Motions", locals: { role: :divider } ) %>
     <%= form.button :wrapped, label: 'Divide', cancel: motion_path(form.object) %>
   <% end %>
 <% end %>
