--- a/app/views/sponsorships/_sponsorship_fields.html.erb
+++ b/app/views/sponsorships/_sponsorship_fields.html.erb
@@ -1,12 +1,8 @@
-<%= content_tag :div, class: "nested-fields" do %>
-  <%= f.inputs( name: "#{f.object.persisted? ? f.object.user.name : 'New Sponsorship'}" ) do %>
-    <% if f.object.new_record? %>
-      <%= f.input :user_name, as: :autocomplete, label: "Sponsor",
-        url: ( f.object.motion.persisted? ? allowed_motion_users_path( f.object.motion, format: :json ) : users_path( format: :json ) ) %>
-    <% end %>
-    <%= content_tag :li do %>
-      <%= link_to_remove_association 'Remove Sponsorship', f %>
-    <% end %>
+<%= field_set_tag f.object.to_s, class: "nested-fields" do %>
+  <% if f.object.new_record? %>
+    <%= f.input :user_name, as: :autocomplete, label: "Sponsor",
+      url: ( f.object.motion.persisted? ? allowed_motion_users_path( f.object.motion, format: :json ) : users_path( format: :json ) ) %>
   <% end %>
+  <%= link_to_remove_association 'Remove Sponsorship', f %>
 <% end %>
 
