--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -7,19 +7,19 @@
     hint: 'What is the maximum number of simultaneous memberships allowed for this position?' %>
   <%= form.input :minimum_slots,
     hint: 'What is the minimum number of simultaneous memberships allowed for this position?' %>
-  <%= form.input :renewable, as: :radio, label: 'Renewable?',
+  <%= form.input :renewable, as: :radio_buttons, label: 'Renewable?',
     hint: 'Should members receive renewal notices regarding this position?' %>
-  <%= form.input :notifiable, as: :radio, label: 'Notifiable?',
+  <%= form.input :notifiable, as: :radio_buttons, label: 'Notifiable?',
     hint: 'Should notices be sent when a membership is created/assigned and when it expires?' %>
-  <%= form.input :designable, as: :radio, label: 'Designable?',
+  <%= form.input :designable, as: :radio_buttons, label: 'Designable?',
     hint: 'Can designees be appointed for this position?' %>
-  <%= form.input :active, as: :radio, label: 'Active?',
+  <%= form.input :active, as: :radio_buttons, label: 'Active?',
     hint: 'Should unassigned memberships be generated automatically for this position?' %>
   <%= form.input :statuses, as: :check_boxes, collection: User::STATUSES,
     hint: 'What status must a user have to be in this position?  Leave blank if status is not a factor.' %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
   <%= form.input :reject_message %>
-  <%= form.input :enrollments, as: :cocoon %>
+  <%= cocoon_fields form, :enrollments, insertable: true %>
   <%= form.button :wrapped, cancel: positions_path %>
 
